# sbb-api-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
notes/: log-1.txt
notes/json/: fahrplanservice_v1_standorte_zurich.json  fahrplanservice_v1_standortenearby_47378177_8540193.json
resources/: ca2_cert.crt
resources/test/: sbb_api_response_0.json  sbb_api_response_2.json  sbb_api_response_3.json  verbindung-1.json  verbindung-2.json  verbindungen-1.json  verbindungen-2.json  verbindungen-3.json  verbindungen-4.json  verbindungen-5.json  verbindungen-6.json  verbindungen-7.json
src/: authenticator.rs  connections.rs  lib.rs
src/models/: koordinaten.rs  legend.rs  location.rs  mod.rs  place.rs  realtime_info.rs  results.rs  ticketing.rs  transport.rs  trip.rs  verbindung.rs
