[package]
name = "sbb-api-rs"
version = "0.1.0"
authors = ["Denys Vitali <denys@denv.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.24"
base64 = "0.10.1"
hex = "0.3.2"
reqwest = "0.9.20"
uuid = "0.7.4"
chrono = "0.4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
more-asserts = "0.2.1"
percent-encoding = "2.1.0"
