[package]
name = "sbb-api"
version = "0.1.0"
authors = ["Denys Vitali <denys@denv.it>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
openssl = "0.10"
base64 = "0.13"
hex = "0.4"
reqwest = "0.11"
uuid = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ore-asserts = "0"
percent-encoding = "2"
mockall = "0.11.0"
regex = "1"
simple-error = "0.2.3"
